Sat Apr 12 2003 Linas Vepstas <linas@linas.org>

	* timer.c: force main window to redraw when midnight rolls over
	* proj.c, prefs.c, fileio.c: add column showing yesterdays time.
	* ctree.h: fix documentation

Wed Mar 19 10:28:05 CST 2003 Linas Vepstas <linas@linas.org>

	* ctree.c: fix core dump when double-clicking in new window.

Sun Jan 19 22:10:15 CST 2003 Linas Vepstas <linas@linas.org>

	* proj.c,proj.h,props-invl.c: fix core-dump when editing intervals

Mon Jan  6 09:11:59 CST 2003 Linas Vepstas <linas@linas.org>

	* *.c: major revision: add notes-taking area to bottom of app.
	* no.po: updated translation from Egil Kvaleberg <egil@kvaleberg.no>
	* *.c: translation string patches from Egil Kvaleberg <egil@kvaleberg.no>
	* ctree.c: fix focus bug on project create,cut,paste,drag
	* main.c: fix bad timestamp bug on backup files
	* notes-area.c: fix bug with position of insert cursor.
	* ctree.c: fix nested cut-n-paste bug, ouch!
	* journal.ghtml: display task notes too.
	* Publish gnotime-2.1.5 containing above fixes

Fri Jan  3 19:05:11 CST 2003 Linas Vepstas <linas@linas.org>

	* ghtml.c: more schemeification
	* primer.ghtml: more examples
	* redhat/gnotime.spec: RPM build file
	* ghtml.c: fix bug for printing integers
	* gtt.scm: remove dead code, fix broken code, add filters
	* invoice.ghtml: port to new interfaces
	* journal.ghtml: port to new interfaces
	* bigtable.ghtml: port to new interfaces
	* tab-delim.ghtml: fix tab-delimited export
	* app.c: fix app bar timer
	* Publish gnotime-2.1.4 containing above fixes

Thu Jan  2 11:54:05 CST 2003 Linas Vepstas <linas@linas.org>

	* timer.c, idle-dialog.c: integrate in new idle-dialog
	* main.c: data files go into own subdirectory
	* Release gnotime-2.1.3

Mon Dec 30 17:50:10 CST 2002 Linas Vepstas <linas@linas.org>

	* ctree.c: fix expander save-state bug
	* *.c: fix misc minor memory leak bugs
	* main.c: make automatic backups of data.
	* menus.c: add 'edit task' menu entry to right-button project click