@@ -275,6 +275,22 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkButton" id="new diary button">
+		      <property name="visible">True</property>
+		      <property name="tooltip" translatable="yes">Create a new diary entry</property>
+		      <property name="can_focus">True</property>
+		      <property name="label" translatable="yes">New Diary Entry</property>
+		      <property name="use_underline">True</property>
+		      <property name="relief">GTK_RELIEF_NORMAL</property>
+		    </widget>
+		    <packing>
+		      <property name="padding">0</property>
+		      <property name="expand">False</property>
+		      <property name="fill">False</property>
+		    </packing>
+		  </child>
+
+		  <child>
 		    <widget class="GtkButton" id="close diary button">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
