@@ -3,6 +3,7 @@ Sat Apr 12 2003 Linas Vepstas <linas@linas.org>
 	* timer.c: force main window to redraw when midnight rolls over
 	* proj.c, prefs.c, fileio.c: add column showing yesterdays time.
 	* ctree.h: fix documentation
+	* notes-area.c: add new-diary-entry button
 
 Wed Mar 19 10:28:05 CST 2003 Linas Vepstas <linas@linas.org>
 
